--- a/css/master.css
+++ b/css/master.css
@@ -4,5 +4,11 @@
   font-size: rgb(0, 0, 0);
 }
 .body{
-  background-color: blue;
+  background-color: #ABDC29;
+  color: #871208;
+  padding: 100px 100px 100px 100px;
+}
+.main_content{
+  background-color: inherit;
+  color: inherit;
 }
