basic order from user and manager POV

--- a/restaurant/src/app/app.component.html
+++ b/restaurant/src/app/app.component.html
@@ -2,10 +2,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
   <nav>
     <img width="300" alt="Taste Magiq Logo" src="../assets/images/Taste_Magic.JPG">
-    <div class="nav-options">About Us</a></div>
-    <div class="nav-options">Menu</a></div>
-    <div class="nav-options">Order Now</a></div>
-    <div class="nav-options">Contact</a></div>
-    <div class="nav-options">Taste Magiq</a></div>
+    <div class="nav-options"><button>About Us</button></div>
+    <div class="nav-options"><button>Menu</button></div>
+    <div class="nav-options"><button>Order Now</button></div>
+    <div class="nav-options"><button>Contact</button></div>
+    <div class="nav-options"><button>Taste Magiq</button></div>
   </nav>
-<router-outlet></router-outlet>
+  <app-main-order></app-main-order>
+  <app-user-order></app-user-order>
