--- a/restaurant/src/styles.css
+++ b/restaurant/src/styles.css
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files
+https://www.w3schools.com/cssref/css3_pr_align-items.asp
+Link for checking ideas in CSS
+https://medium.com/refactoring-ui/7-practical-tips-for-cheating-at-design-40c736799886*/
