changes css and added some basic info

--- a/final-restaurant/src/contact/contact.component.html
+++ b/final-restaurant/src/contact/contact.component.html
@@ -1,1 +1,5 @@
-<p>contact works!</p>
+<div class="contact">
+    <p>
+        This is the contact page of Taste Magiq which will include the location.
+    </p>
+</div>
