--- a/final-restaurant/src/home/home.component.html
+++ b/final-restaurant/src/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet'>
+<ul>
+    <li *ngFor="let info_ of home_info">
+        {{ info_ }}
+    </li>
+</ul>
