--- a/final-restaurant/src/app/app.component.css
+++ b/final-restaurant/src/app/app.component.css
@@ -1,13 +1,142 @@
 .head-nav{
-    flex: inherit;
-    
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  
+  -webkit-flex-flow: row wrap;
+  justify-content: center;
+
+  background-color: inherit;
+}
+
+.images{
+  width: 140px;
+  height: 75px;
+}
+
+.social-media{
+    padding: 0 10px;
+}
+
+.end-name{
+    padding: 0.2px 25px 0.2px 22px; 
+    text-align: left;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 0.6em;
+    color: #ffffff;
+}
+
+.end-images{
+  width : 40px; 
+  height : 40px; 
+}
+
+.end-nav{
+  padding: 0.2px 0.2px 0.2px 0.2px;
+  margin: 0;
+  list-style: none;
+  
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  
+  -webkit-flex-flow: row wrap;
+  justify-content: flex-end;
+
+  background-color: rgb(223, 66, 100);
+
+  border-radius: 0.2em;
+
+}
+
+.header-name{
+    text-emphasis: bold;
+    font-style: italic;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #FF6C7C;
+}
+
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .head-nav{
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  
+  -webkit-flex-flow: row wrap;
+  justify-content: space-around;
+
+  background-color: inherit;
+}
+
+.images{
+  width: 280px;
+  height: 150px;
 }
 
 .social-media{
     width: 0%;
 }
 
-.head-nav{
-    width: 25%;
-    height: 200px;
+.end-images{
+  width : 80px; 
+  height : 80px; 
+}
+
+.end-name{
+    text-align: left;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 0.8em;
+    color: #ffffff;
+}
+
+.end-nav{
+  padding: 2px 2px 2px 2px;
+  margin: 0;
+  list-style: none;
+  
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  
+  -webkit-flex-flow: row wrap;
+  justify-content: space-around;
+
+  background-color: inherit;
+  -webkit-transition: background-color 1s ease-out;
+  -moz-transition: background-color 1s ease-out;
+  -o-transition: background-color 1s ease-out;
+  transition: background-color 1s ease-out;
+
+  border-radius: 0.4em;
+
+}
+
+.end-nav:hover{
+  background-color: rgb(223, 66, 100);
+}
+
+.header-name{
+    text-emphasis: bold;
+    font-style: italic;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #FF6C7C;
+}
+
 }
