--- a/final-restaurant/src/app/app.component.html
+++ b/final-restaurant/src/app/app.component.html
@@ -1,30 +1,20 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<h1 class="header-name" style="text-align: center">
+  <img src="../assets/images/Taste_Magic_burned.png" class="images" alt="TasteMagiq">
+</h1>
 <div class="head-nav">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-  <nav>
-    <div class = "nav-option">
       <button (click)="showHome()">
         HOME
       </button>
-    </div>
-    <div class="nav-option">
       <button (click)="showAbout()">
         ABOUT
       </button>
-    </div>
-    <div class="nav-option">
       <button (click)="showMenu()">
         MENU
       </button>
-    </div>
-    <div class="nav-option">
       <button (click)="showContact()">
         CONTACT
       </button>
-    </div>
-  </nav>
 </div>
 <div class="main-nav">
   <div *ngIf = "currentState === states[0]">
@@ -41,13 +31,20 @@
   </div>
 </div>
 <div class="end-nav">
+  <p class="end-name">TasteMagiq TM 2019</p>
   <div class="social-media">
-    <img src="../assets/images/facebook.jpg" alt="facebook" width="80px" height="80px">
+    <a href="http://www.facebook.com">
+      <img src="../assets/images/facebook.jpg" alt="facebook" class="end-images">
+    </a>
   </div>
   <div class="social-media">
-    <img src="../assets/images/instagram.png" alt="instagram" width="80px" height="80px">
+    <a href="http://www.instagram.com">
+      <img src="../assets/images/instagram.png" class="end-images" alt="instagram">
+    </a>
   </div>
   <div class="social-media">
-    <img src="../assets/images/whatsapp.png" alt="whatsapp" width="80px" height="80px">
+    <a href="http://www.google.com">
+      <img src="../assets/images/whatsapp.png" alt="whatsapp" class="end-images">
+    </a>
   </div>
 </div>
