--- a/final-restaurant/src/menu/menu.component.html
+++ b/final-restaurant/src/menu/menu.component.html
@@ -1,6 +1,11 @@
-<h2>Menu</h2>
-<ul class="menu-items">
-    <li *ngFor="let foodItem of FoodItems">
-        <span class="badge">{{foodItem.name}}</span> {{foodItem.category}}
+<link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet'>
+<ul class="categories">
+    <li *ngFor="let category of categories">
+        <h3 style="text-decoration: underline;"> {{ category }} </h3>
+        <ul class="menu-items">
+            <li *ngFor="let foodItem of FoodItems">
+                <span *ngIf="foodItem.category===category" class="badge">{{foodItem.name}}</span>
+            </li>
+        </ul>
     </li>
 </ul>
