--- a/final-restaurant/src/styles.css
+++ b/final-restaurant/src/styles.css
@@ -1,1 +1,73 @@
+
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
 /* You can add global styles to this file, and also import other style files */
+body{
+  background-color: #375E97;
+  background-image: url("./assets/images/burger-home.jpg");
+  background-position: center;
+}
+button{
+  padding: 25px 45px;
+  font-size: 30px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: inherit;
+  border: none;
+  border-radius: 1.5px;
+  -webkit-transition: background-color 1s ease-out;
+  -moz-transition: background-color 1s ease-out;
+  -o-transition: background-color 1s ease-out;
+  transition: background-color 1s ease-out;
+  text-decoration: none; 
+}
+
+button:hover{
+    padding: 27px 50px;
+    font-size: 40px;
+    border-radius: 2px;
+    color: rgb(248, 48, 72);
+    background-color: rgb(12, 33, 92);
+    border-radius: 0.3em;
+    text-decoration: underline;
+}
+}
+
+/* You can add global styles to this file, and also import other style files */
+body{
+  background-color: #375E97;
+  background-position: 50% 60%; 
+  background-image: url("./assets/images/burger-home.jpg");
+}
+button{
+  padding: 10px 23px;
+  font-size: 15px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: rgb(12, 33, 92);
+  border: none;
+  border-radius: 0.75px;
+  -webkit-transition: background-color 1s ease-out;
+  -moz-transition: background-color 1s ease-out;
+  -o-transition: background-color 1s ease-out;
+  transition: background-color 1s ease-out;
+  text-decoration: underline; 
+  border-style: solid;
+  border-color: crimson;
+}
+
+button:hover{
+    padding: 10px 23px;
+    font-size: 15px;
+    border-radius: 2px;
+    color: black;
+    background-color: inherit;
+    border-radius: 0.3em;
+    text-decoration: underline;
+    border-style: solid;
+    border-color: inherit;
+}
