--- a/final-restaurant/src/contact/contact.component.html
+++ b/final-restaurant/src/contact/contact.component.html
@@ -1,5 +1,7 @@
 <div class="contact">
-    <p>
-        This is the contact page of Taste Magiq which will include the location.
+    <p class="phone-no">
+        The phone number of the restaurant is +91 92072 08863. 
     </p>
+    <div class="location">We are located on Changanasery - Vazhoor Road.</div>
+    <img src="../assets/images/Location.JPG" alt="Location" class="image-location">
 </div>
