--- a/final-restaurant/src/home/home.component.css
+++ b/final-restaurant/src/home/home.component.css
@@ -5,18 +5,72 @@ ul{
     list-style: none;
 }
 li{
-    padding: 10px 10px 10px 1px;
+    padding: 25px 25px 25px 1px;
     font-family: 'Kalam';
-    font-size:2em;
+    font-weight: bold;
+    font-size:4em;
     text-align: center;
-    color: rgb(185, 6, 0);
+    color: rgb(57, 255, 123);
   -webkit-transition: color 1s ease-out;
   -moz-transition: color 1s ease-out;
   -o-transition: color 1s ease-out;
   transition: color 1s ease-out;
 }
 li:hover{
-    color: rgb(7, 65, 26);
+  color: black;
+}
+.bubble_info{
+  padding-top: 50px;
+  padding-left: 30px; 
+  color: aqua;
+}
+.bubble_info2{
+  padding-top: 70px;
+  padding-left: 25px; 
+  color: aqua;
+}
+.bubble{
+  width: 160px;
+  height: 160px;
+  background: rgb(1, 68, 80);
+  border-radius: 50%;
+}
+.bubble2{
+  width: 200px;
+  height: 200px;
+  font-size: 2em;
+  background: rgb(1, 68, 80);
+  border-radius: 50%;
+}
+.bubble3{
+  width: 180px;
+  height: 180px;
+  font-size: 2em;
+  background: rgb(1, 68, 80);
+  border-radius: 50%;
+}
+.bubble4{
+  width: 180px;
+  height: 180px;
+  background: rgb(1, 68, 80);
+  border-radius: 50%;
+}
+
+.empty-circle{
+  padding-left: 300px;
+  background-color: inherit;
+}
+.bubbles{
+  margin-left: 40%;
+  display: flex;
+  flex-flow: row;
+  flex-direction: row; 
+}
+.bubbles2{
+  margin-left: 35%;
+  display: flex;
+  flex-flow: row;
+  flex-direction: row;
 }
 }
 
@@ -28,14 +82,67 @@ li{
     padding: 5px 5px 5px 1px;
     font-family: 'Kalam';
     font-weight: bold;
-    font-size:1em;
+    font-size:1.4em;
     text-align: center;
-    color: rgb(0, 0, 0);
+    color: rgb(57, 255, 123);
   -webkit-transition: color 1s ease-out;
   -moz-transition: color 1s ease-out;
   -o-transition: color 1s ease-out;
   transition: color 1s ease-out;
 }
 li:hover{
-    color: rgb(7, 65, 26);
+  color: black;
+}
+.bubble_info{
+  padding-top: 28px;
+  padding-left: 16px; 
+  color: aqua;
+}
+.bubble_info2{
+  padding-top: 34px;
+  padding-left: 12px; 
+  color: aqua;
+}
+.bubble{
+  width: 80px;
+  height: 80px;
+  background: rgb(1, 68, 80);
+  border-radius: 50%;
+}
+.bubble2{
+  width: 100px;
+  height: 100px;
+  font-size: 1em;
+  background: rgb(1, 68, 80);
+  border-radius: 50%;
+}
+.bubble3{
+  width: 90px;
+  height: 90px;
+  font-size: 1em;
+  background: rgb(1, 68, 80);
+  border-radius: 50%;
+}
+.bubble4{
+  width: 90px;
+  height: 90px;
+  background: rgb(1, 68, 80);
+  border-radius: 50%;
+}
+
+.empty-circle{
+  padding-left: 130px;
+  background-color: inherit;
+}
+.bubbles{
+  display: flex;
+  flex-flow: row;
+  flex-direction: row;
+  padding-left: 50px; 
+}
+.bubbles2{
+  display: flex;
+  flex-flow: row;
+  flex-direction: row;
+  padding-left: 40px; 
 }
