--- a/final-restaurant/src/home/home.component.html
+++ b/final-restaurant/src/home/home.component.html
@@ -1,4 +1,34 @@
 <link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet'>
+<br>
+<div class="bubbles">
+    <div class="bubble">
+        <div class="bubble_info">
+            {{ bubbles[0] }}
+        </div>
+    </div>
+    <div class="empty-circle"></div>
+    <div class="bubble2">
+        <div class="bubble_info">
+            {{ bubbles[1] }}
+        </div>
+    </div>
+</div>
+
+<br>
+<div class="bubbles2">
+    <div class="bubble3">
+        <div class="bubble_info">
+            {{ bubbles[2] }}
+        </div>
+    </div>
+    <div class="empty-circle"></div>
+    <div class="bubble4">
+        <div class="bubble_info2">
+            {{ bubbles[3] }}
+        </div>
+    </div>
+</div>
+
 <ul>
     <li *ngFor="let info_ of home_info">
         {{ info_ }}
