--- a/final-restaurant/src/menu/menu.component.css
+++ b/final-restaurant/src/menu/menu.component.css
@@ -1,3 +1,5 @@
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
 .categories{
     
   border-style: solid;
@@ -19,9 +21,37 @@
 li{
     font-family: 'Kalam';
     list-style: none;
-    font-size: 1.3em;
+    font-size: 1.5em;
     font-weight: bold;
 }
 .badge{
     padding: 0.5em 0.5em 0.5em 0.5em;
+}
+}
+
+.categories{
+    
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(252, 253, 255); 
+  color: black;
+}
+
+li{
+    font-family: 'Kalam';
+    list-style: none;
+    font-size: 1.1em;
+    font-weight: bold;
+}
+.badge{
+    color: blue;
+    padding: 0.2em 0.2em 0.2em 0.2em;
+}
+
+.category_item{
+    padding: 10px;
+}
+.cat_name{
+    font-size: 1.5em;
+    color: black;
 }
