--- a/final-restaurant/src/menu/menu.component.html
+++ b/final-restaurant/src/menu/menu.component.html
@@ -1,7 +1,7 @@
 <link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet'>
 <ul class="categories">
-    <li *ngFor="let category of categories">
-        <h3 style="text-decoration: underline;"> {{ category }} </h3>
+    <li *ngFor="let category of categories" class="category_item">
+        <h3 style="text-decoration: underline" class="cat_name"> {{ category }} </h3>
         <ul class="menu-items">
             <li *ngFor="let foodItem of FoodItems">
                 <span *ngIf="foodItem.category===category" class="badge">{{foodItem.name}}</span>
