--- a/final-restaurant/src/contact/contact.component.html
+++ b/final-restaurant/src/contact/contact.component.html
@@ -3,5 +3,27 @@
         The phone number of the restaurant is +91 92072 08863. 
     </p>
     <div class="location">We are located on Changanasery - Vazhoor Road.</div>
-    <img src="../assets/images/Location.JPG" alt="Location" class="image-location">
+    <div class="mapouter">
+        <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
+                src="https://maps.google.com/maps?q=9%C2%B027'26.6%22N%2076%C2%B033'11.0%22E&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>Google Maps Generator by <a
+                href="https://www.embedgooglemap.net">embedgooglemap.net</a></div>
+        <style>
+            .mapouter {
+                position: relative;
+                text-align: right;
+                height: 500px;
+                width: 600px;
+            }
+    
+            .gmap_canvas {
+                overflow: hidden;
+                background: none !important;
+                height: 500px;
+                width: 600px;
+            }
+        </style>
+    </div>
+    <!--
+    <img src="../assets/images/Location.JPG" alt="Location" class="image-location">-->
 </div>
