added the contact and changed the buttons and bck

--- a/final-restaurant/src/contact/contact.component.html
+++ b/final-restaurant/src/contact/contact.component.html
@@ -2,7 +2,14 @@
     <p class="phone-no">
         The phone number of the restaurant is +91 92072 08863. 
     </p>
-    <div class="location">We are located on Changanasery - Vazhoor Road.</div>
+    <div class="location">
+        Taste MagiQ
+        Peedikathundiyil Buildings,
+        Kurisummood PO,
+        Changanacherry,
+        Kerala - 686104
+        Mobile: 7558855106
+    </div>
     <div class="mapouter">
         <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
                 src="https://maps.google.com/maps?q=9%C2%B027'26.6%22N%2076%C2%B033'11.0%22E&t=&z=13&ie=UTF8&iwloc=&output=embed"
