Added email and whatsapp clicks w/ soft bckg img

--- a/final-restaurant/src/app/app.component.html
+++ b/final-restaurant/src/app/app.component.html
@@ -33,18 +33,27 @@
 <div class="end-nav">
   <p class="end-name">TasteMagiq TM 2019</p>
   <div class="social-media">
-    <a href="http://www.facebook.com">
-      <img src="../assets/images/facebook.jpg" alt="facebook" class="end-images">
-    </a>
+    <button class="normal-button">
+      <a href="https://www.facebook.com/TASTE-MAGIQ-2297436016992003/">
+        <img src="../assets/images/facebook.jpg" alt="facebook" class="end-images">
+      </a>
+    </button>
   </div>
   <div class="social-media">
-    <a href="http://www.instagram.com">
-      <img src="../assets/images/instagram.png" class="end-images" alt="instagram">
-    </a>
+    <button class="normal-button">
+      <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=2ahUKEwiMyLfyuITkAhXBxYUKHSRiBG8QFjAAegQIBBAB&url=https%3A%2F%2Fwww.facebook.com%2Fpages%2Fcategory%2FProduct-Service%2FTASTE-MAGIQ-2297436016992003%2F&usg=AOvVaw2OPpXuTDnRTfqxquEE4IwL">
+        <img src="../assets/images/instagram.png" class="end-images" alt="instagram">
+      </a>
+    </button>
   </div>
   <div class="social-media">
-    <a href="http://www.google.com">
+    <button (click)="copyMessage('7558855106')" value="Click to copy" class="normal-button">
       <img src="../assets/images/whatsapp.png" alt="whatsapp" class="end-images">
-    </a>
+    </button>
+  </div>
+  <div class="social-media">
+    <button (click)="copyMessage('magiqtaste@gmail.com')" value="Click to copy" class="normal-button">
+      <img src="../assets/images/email.jpg" alt="Copy Email" class="end-images">
+    </button>
   </div>
 </div>
