--- a/final-restaurant/src/home/home.component.html
+++ b/final-restaurant/src/home/home.component.html
@@ -1,5 +1,10 @@
 <link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet'>
 <br>
+
+<marquee scrollamount="20" style='font-size: 2em; width: 100%; color: rgb(139, 255, 129);'><b>WELCOME TO TASTE MAGIQ</b></marquee>
+<br>
+
+<br>
 <div class="bubbles">
     <div class="bubble">
         <div class="bubble_info">
