--- a/final-restaurant/src/app/app.component.css
+++ b/final-restaurant/src/app/app.component.css
@@ -63,6 +63,15 @@
     color: #FF6C7C;
 }
 
+.normal-button{
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: inherit;
+  text-decoration: none; 
+}
+
 @media only screen and (min-width: 768px) {
   /* For desktop: */
   .head-nav{
@@ -102,7 +111,14 @@
     font-size: 0.8em;
     color: #ffffff;
 }
-
+.normal-button{
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: inherit;
+  text-decoration: none; 
+}
 .end-nav{
   padding: 2px 2px 2px 2px;
   margin: 0;
