--- a/final-restaurant/src/contact/contact.component.html
+++ b/final-restaurant/src/contact/contact.component.html
@@ -1,6 +1,6 @@
 <div class="contact">
     <p class="phone-no">
-        The phone number of the restaurant is +91 92072 08863. 
+        The phone number of the restaurant is +91 7558855106.
     </p>
     <div class="location">
         Taste MagiQ
@@ -8,28 +8,14 @@
         Kurisummood PO,
         Changanacherry,
         Kerala - 686104
+        <br>
         Mobile: 7558855106
     </div>
     <div class="mapouter">
-        <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
+        <div class="gmap_canvas"><iframe width="900" height="750" id="gmap_canvas"
                 src="https://maps.google.com/maps?q=9%C2%B027'26.6%22N%2076%C2%B033'11.0%22E&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>Google Maps Generator by <a
-                href="https://www.embedgooglemap.net">embedgooglemap.net</a></div>
-        <style>
-            .mapouter {
-                position: relative;
-                text-align: right;
-                height: 500px;
-                width: 600px;
-            }
-    
-            .gmap_canvas {
-                overflow: hidden;
-                background: none !important;
-                height: 500px;
-                width: 600px;
-            }
-        </style>
+                frameborder="50px" scrolling="yes" marginheight="0" marginwidth="0"></iframe>
+        </div>
     </div>
     <!--
     <img src="../assets/images/Location.JPG" alt="Location" class="image-location">-->
