--- a/final-restaurant/src/home/home.component.css
+++ b/final-restaurant/src/home/home.component.css
@@ -16,9 +16,6 @@ li{
   -o-transition: color 1s ease-out;
   transition: color 1s ease-out;
 }
-li:hover{
-  color: black;
-}
 .bubble_info{
   padding-top: 50px;
   padding-left: 30px; 
@@ -32,27 +29,27 @@ li:hover{
 .bubble{
   width: 160px;
   height: 160px;
-  background: rgb(1, 68, 80);
+  background: rgb(13, 214, 250);
   border-radius: 50%;
 }
 .bubble2{
   width: 200px;
   height: 200px;
   font-size: 2em;
-  background: rgb(1, 68, 80);
+  background: rgb(13, 214, 250);;
   border-radius: 50%;
 }
 .bubble3{
   width: 180px;
   height: 180px;
   font-size: 2em;
-  background: rgb(1, 68, 80);
+  background: rgb(13, 214, 250);;
   border-radius: 50%;
 }
 .bubble4{
   width: 180px;
   height: 180px;
-  background: rgb(1, 68, 80);
+  background: rgb(13, 214, 250);;
   border-radius: 50%;
 }
 
@@ -90,9 +87,6 @@ li{
   -o-transition: color 1s ease-out;
   transition: color 1s ease-out;
 }
-li:hover{
-  color: black;
-}
 .bubble_info{
   padding-top: 28px;
   padding-left: 16px; 
@@ -106,27 +100,27 @@ li:hover{
 .bubble{
   width: 80px;
   height: 80px;
-  background: rgb(1, 68, 80);
+  background: rgb(13, 214, 250);;
   border-radius: 50%;
 }
 .bubble2{
   width: 100px;
   height: 100px;
   font-size: 1em;
-  background: rgb(1, 68, 80);
+  background: rgb(13, 214, 250);;
   border-radius: 50%;
 }
 .bubble3{
   width: 90px;
   height: 90px;
   font-size: 1em;
-  background: rgb(1, 68, 80);
+  background: rgb(13, 214, 250);;
   border-radius: 50%;
 }
 .bubble4{
   width: 90px;
   height: 90px;
-  background: rgb(1, 68, 80);
+  background: rgb(13, 214, 250);;
   border-radius: 50%;
 }
 
