--- a/final-restaurant/src/home/home.component.html
+++ b/final-restaurant/src/home/home.component.html
@@ -1,7 +1,7 @@
 <link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet'>
 <br>
 
-<marquee scrollamount="20" style='font-size: 2em; width: 100%; color: rgb(139, 255, 129);'><b>WELCOME TO TASTE MAGIQ</b></marquee>
+<marquee scrollamount="20" style='font-size: 2em; width: 100%; color: rgb(34, 228, 17);'><b>EXPERIENCE THE TASTE OF MAGIQ</b></marquee>
 <br>
 
 <br>
@@ -18,8 +18,6 @@
         </div>
     </div>
 </div>
-
-<br>
 <div class="bubbles2">
     <div class="bubble3">
         <div class="bubble_info">
@@ -34,8 +32,36 @@
     </div>
 </div>
 
+<br>
+
+<br>
+<b>
+    <marquee scrollamount="12" style='font-size: 2em; width: 100%; height: 40px; color: rgb(250, 36, 125); background-color: rgb(4, 175, 124);'>
+        20% off for students,
+        Monday to Thursday</marquee>
+</b>
+<br>
+
+<h2 class="information">
+    We serve softees, ice creams, sundaes, falooda, milk shake, fruit juices, waffles, pizzas, burgers, thick shakes,
+    garlic bread, french fries, chicken popcoren, chicken nuggets
+</h2>
+<br>
+<h2 class="information">
+    We serve with unmatched quality specially crafted by our experienced and talented master-chefs
+</h2>
+<br>
+<b>
+    <marquee scrollamount="13"
+        style='font-size: 2em; width: 100%; height: 40px; color: #c9eb0dfb; background-color: rgb(175, 4, 18);'>
+        Medium Margarita pizza free with any large pizza order</marquee>
+</b>
+<br>
+
 <ul>
     <li *ngFor="let info_ of home_info">
-        {{ info_ }}
+        <div class="info-back">
+            {{  info_ }}
+        </div>
     </li>
 </ul>
