--- a/final-restaurant/src/styles.css
+++ b/final-restaurant/src/styles.css
@@ -5,9 +5,9 @@
 body{
   background-color: #375E97;
   background-image: url("./assets/images/burger-home.jpg");
-  background-repeat: no-repeat;
+  background-repeat: repeat-x;
   background-attachment: scroll;
-  background-blend-mode: soft-light; 
+  /* background-blend-mode: soft-light; 
 }
 button{
   padding: 50px 90px;
@@ -26,15 +26,6 @@ button{
   transition: background-color 1s ease-out;
   text-decoration: none; 
 }
-
-button:hover{
-    padding: 60px 100px;
-    font-size: 75px;
-    border-radius: 2px;
-    color: rgb(248, 48, 72);
-    background-color: rgb(12, 33, 92);
-    
-}
 }
 
 /* You can add global styles to this file, and also import other style files */
@@ -42,8 +33,8 @@ body{
   background-color: #375E97;
   background-position: 50% 60%; 
   background-image: url("./assets/images/burger-home.jpg");
-  background-blend-mode: soft-light; 
-  background-repeat: no-repeat;
+  /* background-blend-mode: soft-light;  */
+  background-repeat: repeat-x;
   background-attachment: scroll;
 }
 button{
@@ -64,16 +55,4 @@ button{
    
   border-style: solid;
   border-color: crimson;
-}
-
-button:hover{
-    padding: 10px 23px;
-    font-size: 15px;
-    border-radius: 2px;
-    color: black;
-    background-color: inherit;
-    border-radius: 0.3em;
-    
-    border-style: solid;
-    border-color: inherit;
 }
