--- a/final-restaurant/src/home/home.component.html
+++ b/final-restaurant/src/home/home.component.html
@@ -36,7 +36,8 @@
 
 <br>
 <b>
-    <marquee scrollamount="12" style='font-size: 2em; width: 100%; height: 40px; color: rgb(250, 36, 125); background-color: rgb(4, 175, 124);'>
+    <marquee scrollamount="12" 
+    style='font-size: 1.6em; width: 100%; height: 33px; color: #ebfa63fb; background-color: rgb(175, 4, 18);'>
         20% off for students,
         Monday to Thursday</marquee>
 </b>
@@ -53,7 +54,7 @@
 <br>
 <b>
     <marquee scrollamount="13"
-        style='font-size: 2em; width: 100%; height: 40px; color: #c9eb0dfb; background-color: rgb(175, 4, 18);'>
+        style='font-size: 1.6em; width: 100%; height: 33px; color: #ebfa63fb; background-color: rgb(175, 4, 18);'>
         Medium Margarita pizza free with any large pizza order</marquee>
 </b>
 <br>
