--- a/final-restaurant/src/contact/contact.component.html
+++ b/final-restaurant/src/contact/contact.component.html
@@ -1,6 +1,6 @@
 <div class="contact">
     <p class="phone-no">
-        The phone number of the restaurant is +91 7558855106.
+        The phone number of the restaurant is 7558855106.
     </p>
     <div class="location">
         Taste MagiQ
@@ -12,7 +12,8 @@
         Mobile: 7558855106
     </div>
     <div class="mapouter">
-        <div class="gmap_canvas"><iframe width="900" height="750" id="gmap_canvas"
+        <div class="gmap_canvas">
+            <iframe width="900" height="750" id="gmap_canvas"
                 src="https://maps.google.com/maps?q=9%C2%B027'26.6%22N%2076%C2%B033'11.0%22E&t=&z=13&ie=UTF8&iwloc=&output=embed"
                 frameborder="50px" scrolling="yes" marginheight="0" marginwidth="0"></iframe>
         </div>
