--- a/final-restaurant/src/home/home.component.html
+++ b/final-restaurant/src/home/home.component.html
@@ -38,7 +38,7 @@
 <b>
     <marquee scrollamount="12" 
     style='font-size: 1.6em; width: 100%; height: 33px; color: #ebfa63fb; background-color: rgb(175, 4, 18);'>
-        20% off for students,
+        Special Offer : 20% off for students,
         Monday to Thursday</marquee>
 </b>
 <br>
