Add images to menu

--- a/final-restaurant/src/menu/menu.component.html
+++ b/final-restaurant/src/menu/menu.component.html
@@ -9,6 +9,9 @@
         </ul>
     </li>
 </ul>
+<div style="text-align: center; height: 500px;">
+    <img src="../assets/images/Falooda.jpg" alt="Waffles" style="width: 50%; height: 500px; align-items: center;">
+</div>
 <ul class="categories">
     <li *ngFor="let category of categories2" class="category_item">
         <h3 style="text-decoration: underline" class="cat_name" style="color: orange; text-decoration: underline;">
@@ -20,7 +23,10 @@
             </li>
         </ul>
     </li>
-</ul>
+</ul><div style="height: 500px;">
+    <img src="../assets/images/Burger.jpg" alt="Waffles" style="width: 50%; height: 500px; align-items: center;">
+    <img src="../assets/images/Waffles.jpg" alt="Waffles" style="width: 50%; height: 500px; align-items: center;">
+</div>
 <ul class="categories">
     <li *ngFor="let category of categories3" class="category_item">
         <h3 style="text-decoration: underline" class="cat_name" style="color: orange; text-decoration: underline;">
@@ -33,6 +39,9 @@
         </ul>
     </li>
 </ul>
+<div style="text-align: center; height: 500px;">
+    <img src="../assets/images/French Fries.jpg" alt="Waffles" style="width: 50%; height: 500px; align-items: center;">
+</div>
 <ul class="categories">
     <li *ngFor="let category of categories4" class="category_item">
         <h3 style="text-decoration: underline" class="cat_name" style="color: orange; text-decoration: underline;">
@@ -45,4 +54,7 @@
         </ul>
     </li>
 </ul>
+<div style="text-align: center; height: 500px;">
+    <img src="../assets/images/PizzaNew.jpg" alt="Waffles" style="width: 50%; height: 500px; align-items: center;">
+</div>
 <h3 style="color: aquamarine;">* = check for ingredient details from restaurant</h3>
