--- a/final-restaurant/src/app/app.component.html
+++ b/final-restaurant/src/app/app.component.html
@@ -14,10 +14,13 @@
         CONTACT
       </button>
       <div class="taste-magiq-img">
-        <img src="../assets/images/Taste_Magic_burned.png" class="images" alt="TasteMagiq">
+        <img src="../assets/images/Taste_Magic_burned.png" class="images" style="border-radius: 50%;  background-color: #ffffff;" alt="TasteMagiq">
       </div>
 </div>
 <div class="main-nav">
+  <div class="announcement">
+    We are temporarily CLOSED due to current situation. We will be back soon.
+  </div>
   <div *ngIf = "currentState === states[0]">
     <app-home></app-home>
   </div>
