--- a/final-restaurant/src/contact/contact.component.html
+++ b/final-restaurant/src/contact/contact.component.html
@@ -1,6 +1,6 @@
 <div class="contact">
     <p class="phone-no">
-        The phone number of the restaurant is 7558855106.
+        Mobile : 7558855106
     </p>
     <div class="location">
         Taste MagiQ
