--- a/final-restaurant/src/home/home.component.html
+++ b/final-restaurant/src/home/home.component.html
@@ -44,8 +44,8 @@
 <!-- <br> -->
 
 <h2 class="information">
-    We serve softees, ice creams, sundaes, falooda, milk shake, fruit juices, waffles, pizzas, burgers, thick shakes,
-    garlic bread, french fries, chicken popcoren, chicken nuggets
+    We serve softee, ice cream, sundae, falooda, milk shake, fruit juice, waffles, pizzas, burgers, thick shakes,
+    garlic bread, french fries, chicken popcorn, chicken nuggets
 </h2>
 <br>
 <h2 class="information">
