Updated angular and changed status to OPEN

--- a/final-restaurant/src/app/app.component.html
+++ b/final-restaurant/src/app/app.component.html
@@ -19,7 +19,7 @@
 </div>
 <div class="main-nav">
   <div class="announcement">
-    We are temporarily CLOSED due to current situation. We will be back soon.
+    We are OPEN now.
   </div>
   <div *ngIf = "currentState === states[0]">
     <app-home></app-home>
