--- a/final-restaurant/src/app/app.component.html
+++ b/final-restaurant/src/app/app.component.html
@@ -19,7 +19,7 @@
 </div>
 <div class="main-nav">
   <div class="announcement">
-    We are OPEN now.
+    WE ARE OPEN.
   </div>
   <div *ngIf = "currentState === states[0]">
     <app-home></app-home>
